--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Emergency Service</title>
+    <title>Emergency Service Directory</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300;400;500;600;700&display=swap"
@@ -36,14 +36,13 @@
 
 
             <button class="btn rounded-3xl  bg-green-100">
-                <span id="">100</span>
+                <span id="available-coins">100</span>
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i></button>
 
 
             <button class="btn rounded-3xl bg-green-500 text-white"><span>0</span> Copy </button>
         </div>
     </div>
-
 
     <!-- Hero Section -->
 
@@ -94,7 +93,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -126,7 +126,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -158,7 +159,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -190,7 +192,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -222,7 +225,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -254,7 +258,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -286,7 +291,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -318,7 +324,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
@@ -350,7 +357,8 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button class="btn w-full bg-green-500 text-white"><i class="fa-solid fa-phone"></i>
+                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                                    class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
