shown calling feature with dynamic name and number

--- a/index.html
+++ b/index.html
@@ -63,10 +63,10 @@
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4">
 
 
-            <div class="md:col-span-2 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+            <div class="cart-contaiener md:col-span-2 grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
 
 
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/emergency.png" alt="">
@@ -82,9 +82,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">National Emergency Number</h3>
+                    <h3 class="font-bold service-name">National Emergency Number</h3>
                     <p class="text-gray-500 font-thin">National Emergency</p>
-                    <p class="font-bold">999</p>
+                    <p class="font-bold service-number">999</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         All
                     </p>
@@ -93,13 +93,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/police.png" alt="">
@@ -115,9 +115,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Police Helpline Number</h3>
+                    <h3 class="font-bold service-name">Police Helpline Number</h3>
                     <p class="text-gray-500 font-thin">Police</p>
-                    <p class="font-bold">999</p>
+                    <p class="font-bold service-number">999</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         Police
                     </p>
@@ -126,13 +126,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/fire-service.png" alt="">
@@ -148,9 +148,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Fire Service Number</h3>
+                    <h3 class="font-bold service-name">Fire Service Number</h3>
                     <p class="text-gray-500 font-thin">Fire Service</p>
-                    <p class="font-bold">999</p>
+                    <p class="font-bold service-number">999</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         Fire
                     </p>
@@ -159,13 +159,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/ambulance.png" alt="">
@@ -181,9 +181,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Ambulance Service</h3>
+                    <h3 class="font-bold service-name">Ambulance Service</h3>
                     <p class="text-gray-500 font-thin">Ambulance</p>
-                    <p class="font-bold">1994-999999</p>
+                    <p class="font-bold service-number">1994-999999</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         Health
                     </p>
@@ -192,13 +192,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/emergency.png" alt="">
@@ -214,9 +214,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Women & Child Helpline</h3>
+                    <h3 class="font-bold service-name">Women & Child Helpline</h3>
                     <p class="text-gray-500 font-thin">Women & Child Helpline</p>
-                    <p class="font-bold">109</p>
+                    <p class="font-bold service-number">109</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         Help
                     </p>
@@ -225,13 +225,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/emergency.png" alt="">
@@ -247,9 +247,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Anti-Corruption Helpline</h3>
+                    <h3 class="font-bold service-name">Anti-Corruption Helpline</h3>
                     <p class="text-gray-500 font-thin">Anti-Corruption</p>
-                    <p class="font-bold">106</p>
+                    <p class="font-bold service-number">106</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         Govt
                     </p>
@@ -258,13 +258,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/emergency.png" alt="">
@@ -280,9 +280,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Electricity Helpline</h3>
+                    <h3 class="font-bold service-name">Electricity Helpline</h3>
                     <p class="text-gray-500 font-thin">Electricity Outage</p>
-                    <p class="font-bold">16216</p>
+                    <p class="font-bold service-number">16216</p>
                     <p class="w-20 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         Electricity
                     </p>
@@ -291,13 +291,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/emergency.png" alt="">
@@ -313,9 +313,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Brac Helpline</h3>
+                    <h3 class="font-bold service-name">Brac Helpline</h3>
                     <p class="text-gray-500 font-thin">Brac</p>
-                    <p class="font-bold">16445</p>
+                    <p class="font-bold service-number">16445</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         NGO
                     </p>
@@ -324,13 +324,13 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
                     </div>
                 </div>
-                <div class=" bg-white p-4 rounded shadow">
+                <div class="cart bg-white p-4 rounded shadow">
                     <div class="flex items-center justify-between mb-2">
                         <div class="bg-[#FFE3E2] rounded-lg">
                             <img class="w-8 h-8" src="./assets/emergency.png" alt="">
@@ -346,9 +346,9 @@
                             </svg>
                         </div>
                     </div>
-                    <h3 class="font-bold">Bangladesh Railway Helpline </h3>
+                    <h3 class="font-bold service-name">Bangladesh Railway Helpline </h3>
                     <p class="text-gray-500 font-thin">Bangladesh Railway</p>
-                    <p class="font-bold">163</p>
+                    <p class="font-bold service-number">163</p>
                     <p class="w-15 h-9 text-center flex justify-center items-center bg-gray-100 rounded-lg mb-3">
                         Travel
                     </p>
@@ -357,7 +357,7 @@
                             <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
-                            <button id="call-button" class="btn w-full bg-green-500 text-white"><i
+                            <button class="call-button btn w-full bg-green-500 text-white"><i
                                     class="fa-solid fa-phone"></i>
                                 Call</button>
                         </div>
@@ -366,6 +366,7 @@
 
             </div>
 
+            <!-- Call History -->
 
             <div class="md:col-span-1 bg-white p-4 rounded shadow">
                 <h3 class="font-bold text-xl">Call History</h3>
