Copy count functionality added

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <i class="fa-solid fa-star" style="color: #FFD43B;"></i></button>
 
 
-            <button class="btn rounded-3xl bg-green-500 text-white"><span>0</span> Copy </button>
+            <button class="btn rounded-3xl bg-green-500 text-white"><span id="copy-count">0</span> Copy </button>
         </div>
     </div>
 
@@ -90,7 +90,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class="  fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -123,7 +123,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -156,7 +156,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -189,7 +189,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -222,7 +222,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -255,7 +255,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -288,7 +288,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -321,7 +321,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
@@ -354,7 +354,7 @@
                     </p>
                     <div class="flex gap-3">
                         <div class="w-1/2">
-                            <button class="btn w-full"><i class="fa-regular fa-copy"></i> Copy</button>
+                            <button class="click-copy btn w-full"><i class=" fa-regular fa-copy"></i> Copy</button>
                         </div>
                         <div class="w-1/2">
                             <button class="call-button btn w-full bg-green-500 text-white"><i
