Added call history section show name,number and date

--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
 
             <div class="md:col-span-1 bg-white p-4 rounded shadow">
                 <h3 class="font-bold text-xl">Call History</h3>
-                <p>Call history details go here...</p>
+                <div id="call-history"></div>
             </div>
 
         </div>
