--- a/index.html
+++ b/index.html
@@ -369,7 +369,15 @@
             <!-- Call History -->
 
             <div class="md:col-span-1 bg-white p-4 rounded shadow">
-                <h3 class="font-bold text-xl">Call History</h3>
+                <div class="flex justify-between items-center">
+                    <div>
+                        <h3 class="font-bold text-xl"><i class="fa-regular fa-clock"></i> Call History</h3>
+                    </div>
+                    <div>
+                        <button id="clear-btn" class=" btn rounded-3xl bg-green-500 text-white"> Clear
+                        </button>
+                    </div>
+                </div>
                 <div id="call-history"></div>
             </div>
 
